# profitspot-mcp

./: .mcpize  Dockerfile  LICENSE  README.md  mcpize.yaml  pyproject.toml  run_server.py  server.json
src/profitspot_mcp/: __init__.py  __main__.py  auth.py  cache.py  calculations.py  defillama.py  models.py  scoring.py  server.py
src/profitspot_mcp/tools/: __init__.py  analyze.py  discover.py  impermanent_loss.py  overview.py  risk.py  simulate.py  whales.py
tests/: test_tools.py
