[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profitspot-mcp"
version = "1.1.0"
description = "Cross-chain DeFi intelligence for AI agents. Risk-scored yields, profit simulation, whale tracking across 86 chains and 6,500+ pools. By profitspot.live"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "ProfitSpot", email = "hello@profitspot.live"}]
keywords = ["mcp", "defi", "yield", "blockchain", "ai", "agents", "risk-scoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
profitspot-mcp = "profitspot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/profitspot_mcp"]
