[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profitspot-mcp"
version = "1.1.1"
description = "The DeFi Brain for AI agents — ask Claude to find safe yields, grade liquidity pool risk, simulate profits, calculate impermanent loss, and track whale movements across 86 blockchains and 6,500+ liquidity pools. Risk-scored A-F, Monte Carlo simulations, real-time DeFiLlama data. pip install profitspot-mcp"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "ProfitSpot", email = "hello@profitspot.live"}]
keywords = [
    "mcp", "mcp-server", "model-context-protocol",
    "defi", "decentralized-finance", "yield-farming", "yield-optimizer",
    "liquidity-pool", "impermanent-loss", "impermanent-loss-calculator",
    "risk-scoring", "risk-assessment", "monte-carlo-simulation",
    "whale-tracking", "blockchain", "ethereum", "cross-chain",
    "defi-analytics", "defi-intelligence", "ai-agent", "claude",
    "cursor", "llm-tools", "tvl", "apy", "defillama"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
profitspot-mcp = "profitspot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/profitspot_mcp"]
